--- a/index.html
+++ b/index.html
@@ -248,19 +248,26 @@
           <h2 class="title title--h2 yellow">Победители</h2>
 
           <div class="winners-filters">
-            <label class="label">
-              <select name="week" class="input input--select placeholder" required>
-                <option value="" disabled="" selected="" hidden="">Неделя 1</option>
-                <option value="Неделя 1">Неделя 1</option>
-                <option value="Неделя 2">Неделя 2</option>
-                <option value="Неделя 3">Неделя 3</option>
-              </select>
-              <span class="input-icon">
-                <svg width="14" height="10" viewBox="0 0 14 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M13.1569 1.65685L7.1007 7.71301L1.44385 2.05615" stroke="black" stroke-width="2" />
-                </svg>
-              </span>
-            </label>
+            <form action="#winners" method="GET" class="form">
+              <label class="label">
+                <select name="week" class="input input--select placeholder" required>
+                  <option value="" disabled="" selected="" hidden="">Выберите дату</option>
+                  <option value="08.09.2025-14.09.2025">08.09.2025-14.09.2025</option>
+                  <option value="15.09.2025-21.09.2025">15.09.2025-21.09.2025</option>
+                  <option value="22.09.2025-28.09.2025">22.09.2025-28.09.2025</option>
+                  <option value="29.09.2025-05.10.2025">29.09.2025-05.10.2025</option>
+                  <option value="06.10.2025-12.10.2025">06.10.2025-12.10.2025</option>
+                  <option value="13.10.2025-19.10.2025">13.10.2025-19.10.2025</option>
+                  <option value="20.10.2025-26.10.2025">20.10.2025-26.10.2025</option>
+                  <option value="27.10.2025-31.10.2025">27.10.2025-31.10.2025</option>
+                </select>
+                <span class="input-icon">
+                  <svg width="14" height="10" viewBox="0 0 14 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M13.1569 1.65685L7.1007 7.71301L1.44385 2.05615" stroke="black" stroke-width="2" />
+                  </svg>
+                </span>
+              </label>
+            </form>
 
             <script>
               function onSearchFormSubmit(e) {
@@ -740,7 +747,10 @@
               </div>
               <div class="answer">
                 <div class="answer__content">
-                  <p>Если у вас возникли ещё вопросы, вы можете связаться с организаторами акции по электронной почте: info@president-cheese.ru</p>
+                  <p>
+                    Если у вас возникли ещё вопросы, вы можете связаться с организаторами акции по электронной почте:
+                    <a href="mailto:info@kamamber-promo.ru">info@kamamber-promo.ru</a>
+                  </p>
                 </div>
               </div>
             </li>
